--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
       border-style: solid;
       border-color: darkgrey;
     }
+    @media screen and (max-width:900px)
+    {
+      .firstsection
+      {flex-direction: column-reverse;}
+      .firstsection > div
+      {width: 100%;
+      font-size: 2rem}
+      .firstsection > div > img
+      {width: 100%
+      height: 100%}
+    }
     .firstsection {
       display: flex;
       justify-content: space-around;
