--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       {flex-direction: column-reverse;}
       .firstsection > div
       {width: 100%;
-      font-size: 2rem}
+      font-size: 2rem;}
       .firstsection > div > img
-      {width: 100%
-      height: 100%}
+      {width: 100%;
+      height: 100%;}
     }
     .firstsection {
       display: flex;
